--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,14 +13,14 @@ services:
     autowire: true      # Automatically injects dependencies in your services.
     autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
     public: false       # Allows optimizing the container by removing unused services; this also means
-      # fetching services directly from the container via $container->get() won't work.
+    # fetching services directly from the container via $container->get() won't work.
     # The best practice is to be explicit about your dependencies anyway.
 
   # makes classes in src/ available to be used as services
   # this creates a service per class whose id is the fully-qualified class name
   App\:
     resource: '../src/*'
-    exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Service,Controller,Kernel.php}'
+    exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Service,Admin/Controller,Controller,Kernel.php}'
 
   # controllers are imported separately to make sure services can be injected
   # as action arguments even if you don't extend any base controller class
@@ -47,9 +47,11 @@ services:
     - { name: sonata.admin, manager_type: orm, label: Users }
   admin.resources:
     class: App\Admin\ResourcesAdmin
-    arguments: [~, App\Entity\Resources, ~]
-    calls:
-    #         - [setTemplate, ['edit', '@App/Admin/resources/edit.html.twig']]
+    arguments: [~, App\Entity\Resources, App\Admin\Controller\ResourcesAdminController, ~]
+
+   # calls:
+
+    #  - [setTemplate, ['edit', '@App/Admin/resources/edit.html.twig']]
     #      - [setTemplate, ['create', '@App/Admin/resources/edit.html.twig']]
     tags:
     - { name: sonata.admin, manager_type: orm, label: Resources }
