--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,12 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "redcode/tree-bundle": "^0.1.0@alpha",
+        "friendsofsymfony/rest-bundle": "^2.5",
+        "friendsofsymfony/user-bundle": "~2.0",
         "sensio/framework-extra-bundle": "^5.1",
         "sonata-project/admin-bundle": "^3.45",
         "sonata-project/doctrine-orm-admin-bundle": "^3.8",
+        "sonata-project/user-bundle": "^4.3",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
