--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "sonata-project/doctrine-orm-admin-bundle": "^3.8",
         "sonata-project/user-bundle": "^4.3",
         "symfony/asset": "*",
+        "symfony/browser-kit": "4.1.*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
         "symfony/flex": "^1.1",
@@ -30,11 +31,14 @@
         "symfony/yaml": "*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^5.0",
+        "symfony/css-selector": "4.1.*",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "*",
         "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "4.1.*",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
+        "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "*"
     },
     "config": {
