--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -14,7 +14,7 @@ doctrine:
         default_table_options:
             charset: utf8mb4
             collate: utf8mb4_unicode_ci
-        url: 'mysql://admin:awdasd@172.16.238.12:3306/s-project'
+        url: '%env(resolve:DATABASE_URL)%'
 
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
